# patient-backend

./: Dockerfile  MakeFile  README.md  docker-compose.yml  local_data_create.sql  pyproject.toml  setup.py
app/: main.py  urls.py
app/config/: __init__.py  config.yaml
app/database/: __init__.py
app/lifespan/: __init__.py
app/logging/: __init__.py
app/middlewares/: request.py
app/responses/: default_class.py  generic.py
app/routers/: patients.py
patient_backend/: main.py  schemas.py  urls.py
patient_backend/apis/: crud.py
patient_backend/apis/api_v1/: items.py
patient_backend/core/: config.py
patient_backend/dao/: __init__.py  patients.py
patient_backend/db/: common_models.py  connection.py
patient_backend/models/: __init__.py  main_models.py
patient_backend/utils/: secret_manager.py  status_codes.py
