[tool.poetry]
name = "patient-backend"
version = "0.1.0"
description = ""
authors = ["Aksh Bhati <aksh.bhati@nagarro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "^0.109.0"
loguru = "^0.7.2"
uvicorn = "^0.27.0"
omegaconf = "^2.3.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
